<resources>
    <string name="app_name">My Cards</string>
    <string name="empty_body">Bo\'sh natija qayti. Iltimos qo\'llab-quvvatlash markaziga habar bering!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Sign up</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registration">Sign up</string>
    <string name="enter">Enter</string>
    <string name="code">Code</string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="number">Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Reset</string>
    <string name="add">Add Card</string>
    <string name="contacts">Contacts</string>
    <string name="enterPhoneNumber">Enter Phone Number</string>
    <string name="wrongPhoneNumber">Short Phone Number</string>
    <string name="enterPassword">Enter Password</string>
    <string name="wrongPassword">Short Password</string>
    <string name="enterLastName">Enter Last Name</string>
    <string name="wrongLastName">Short Last Name</string>
    <string name="enterFirstName">Enter First Name</string>
    <string name="wrongFirstName">Short First Name</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password_new">Confirm Password New</string>
    <string name="enterCode">Enter Code</string>
    <string name="wrongCode">Short  Code</string>
    <string name="enterConPassword">Enter Confirm Password</string>
    <string name="wrongConPassword">Different Password</string>
    <string name="welcomme_back">Welcome back</string>
    <string name="login_in_to">Login to your account</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="your_password_has_nbeen_reset">Your password has \nbeen reset</string>
    <string name="done">Done</string>
    <string name="forgot_verification">Phone Verification</string>
    <string name="please">Please enter your phone number</string>
    <string name="send_sms">We have you an SMS with a code\n to number:</string>
    <string name="enter_your_otp_code">Enter your  OTP  code here:</string>
    <string name="verify_your_phone_number">Verify your\nphone number</string>
    <string name="otp_code_andpassword">Enter your OPT code here:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="karta_nomeri">Enter Number Card</string>
    <string name="short_number">Short Number Card </string>
    <string name="card_verification">Card Verification</string>
    <string name="addCard">Add Card</string>
    <string name="choose_color">Choose Color</string>
    <string name="name_card">Name card</string>
    <string name="date">Date</string>
    <string name="number_card">Number Card</string>
    <string name="enterDate">Enter Date</string>
    <string name="shortDate">Short Date</string>
    <string name="karta_nomi">Enter Name  Card</string>
    <string name="shortCardName">Short Card Name</string>
</resources>