<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/win"
        android:src="@drawable/in_person"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_in_to"
        android:id="@+id/login_to_your"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/win"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/login_to_your">

        <com.github.pinball83.maskededittext.MaskedEditText
            android:id="@+id/login_PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:maskIcon="@drawable/ic_baseline_local_phone_24"
            android:drawablePadding="12dp"
            android:imeOptions="actionNext"
            android:hint="@string/phone_number"
            app:mask="+998 ** *** ** **"
            app:notMaskedSymbol="*"
            android:inputType="phone"
            android:padding="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed2_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/ed1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_https_24"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/switchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_check_box_outline_blank_24"
        app:layout_constraintLeft_toLeftOf="@id/ed2_login"
        app:layout_constraintTop_toBottomOf="@id/ed2_login" />

    <TextView
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/remember_me"
        app:layout_constraintBottom_toBottomOf="@id/switchBtn"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/switchBtn"
        app:layout_constraintTop_toTopOf="@id/switchBtn" />

    <TextView
        android:id="@+id/forget_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="16sp"
        android:layout_marginTop="11dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed2_login" />


    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bgn_btn"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/forget_Password" />

    <Button
        android:id="@+id/button_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bgn_btn"
        android:text="@string/registration"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/button_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>