<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".screens.ForgetCodeFragment">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:id="@+id/back_arrow_forgotCode"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <ImageView
        android:id="@+id/imageShowDataALL"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ggggg"
        android:alpha="0.8"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/verfiy_sms" />

    <TextView
        android:id="@+id/ggggg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_verification"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:id="@+id/otp"
        android:text="@string/enter_your_otp_code"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageShowDataALL" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed1"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
       app:layout_constraintTop_toBottomOf="@id/otp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_forgetCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/code"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="12dp"
            android:inputType="phone"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/button_forgetCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bgn_btn"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ed1" />
</androidx.constraintlayout.widget.ConstraintLayout>