<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_height="match_parent"
    tools:context=".screens.ForgetNumberFragment">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:id="@+id/back_arrow_forgotNumber"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/qwer"/>

    <ImageView
        android:id="@+id/imageShowDataALLL"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:alpha="0.8"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/phone_forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/qwer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/to"
       app:layout_constraintTop_toBottomOf="@id/imageShowDataALLL"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_sms"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:id="@+id/send_sms"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/to"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/fab"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/send_sms"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/button_forgot_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content">
        <com.github.pinball83.maskededittext.MaskedEditText
            android:id="@+id/forgot_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:maskIcon="@drawable/ic_baseline_local_phone_24"
            android:drawablePadding="12dp"
            android:imeOptions="actionDone"
            android:hint="@string/phone_number"
            app:mask="+998 ** *** ** **"
            app:notMaskedSymbol="*"
            android:inputType="phone"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        app:layout_constraintTop_toBottomOf="@id/fab"
        android:background="@drawable/bgn_btn"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:id="@+id/button_forgot_number"/>

</androidx.constraintlayout.widget.ConstraintLayout>