<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.examen.screens.NewPasswordFragment">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_arrow_newPassword"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:id="@+id/hhhhh"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        android:id="@+id/imageShowDataAALL"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hhhhh" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:endIconMode="password_toggle"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageShowDataAALL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_newPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_password"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_baseline_https_24"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed3"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comfirm_password_newPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:hint="@string/confirm_password_new"
            android:drawableStart="@drawable/ic_baseline_https_24"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bgn_btn"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ed3" />

</androidx.constraintlayout.widget.ConstraintLayout>